# CAD_Solid_Subtraction

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_rus.md
src/: CreateSkin.cpp  CreateSkin.hpp  TaskSolution.cpp  TaskSolution.hpp  cutSphereMove.cpp  mwArcFunction.cpp  mwArcFunction.hpp  mwDiscreteFunction.hpp  mwException.cpp  mwException.hpp  mwIdxRangeException.cpp  mwIdxRangeException.hpp  mwMathConstants.hpp  mwTPoint3d.hpp
tools/: PointVisualizer_readme.txt
